division for h and cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.16)
 project(STACK) 
 set(CMAKE_CXX_STANDARD 17)
 file(MAKE_DIRECTORY build)
-file(MAKE_DIRECTORY Release)
-file(MAKE_DIRECTORY Debug)
+file(MAKE_DIRECTORY ./build/Release)
+file(MAKE_DIRECTORY ./build/Debug)
 
 
-include_directories(src tests)
+include_directories(inc src tests)
 add_compile_options(-std=c++17 -O2)
 include_directories(tests src)
 
@@ -26,7 +26,7 @@ find_program(CLANG_TIDY "clang-tidy")
 if(CLANG_TIDY)
   add_custom_target(
     clang-tidy
-    COMMAND clang-tidy ${CMAKE_SOURCE_DIR}/src/stack.hpp -- -std=c++17 -O2
+    COMMAND clang-tidy ${CMAKE_SOURCE_DIR}/src/stack.cpp ${CMAKE_SOURCE_DIR}/inc/stack.h -- -I ../inc/stack.h
     )
 endif()
 
